// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form Button 1`] = `
<button
  className="sc-gZMcBi gTQthr"
>
  Click Me
</button>
`;

exports[`Storyshots Form Checkbox 1`] = `
<section
  className="sc-VigVT iARuFr"
>
  <input
    className="sc-gzVnrw geKrCW"
    id="checkbox"
    name="checkbox"
    type="checkbox"
  />
  <label
    htmlFor="checkbox"
  >
    Label
  </label>
</section>
`;

exports[`Storyshots Form Field 1`] = `
<section
  className="sc-gqjmRU gIbBcD"
>
  <input
    className="sc-htoDjs jgVuvd"
    placeholder="test"
    type="text"
  />
</section>
`;

exports[`Storyshots Form Fieldset 1`] = `
<section
  className="sc-VigVT iARuFr"
>
  <input
    className="sc-htoDjs jgVuvd"
    placeholder="test"
    type="text"
  />
</section>
`;

exports[`Storyshots Form Input 1`] = `
<input
  className="sc-htoDjs jgVuvd"
  placeholder="test"
  type="text"
/>
`;

exports[`Storyshots Form Label 1`] = `
<label
  className="sc-dnqmqq cntxcn"
>
  Label
</label>
`;

exports[`Storyshots Form Textarea 1`] = `
<textarea
  className="sc-iwsKbI dpOqPg"
  placeholder="test"
/>
`;

exports[`Storyshots Typography Large Body 1`] = `
<h3
  className="sc-htpNat deHCEJ"
>
  Large Body
</h3>
`;

exports[`Storyshots Typography Large title 1`] = `
<h1
  className="sc-bdVaJa bcdDQm"
>
  Large title
</h1>
`;

exports[`Storyshots Typography Small Title 1 1`] = `
<h4
  className="sc-bxivhb gwyPxj"
>
  Small Title
</h4>
`;

exports[`Storyshots Typography Small Title 2 1`] = `
<h5
  className="sc-ifAKCX cSrcVm"
>
  Small Title
</h5>
`;

exports[`Storyshots Typography Small Title 3 1`] = `
<h6
  className="sc-EHOje kYZbFa"
>
  Small Title
</h6>
`;
